修正中文版登入成功問題

--- a/login-success-zh.html
+++ b/login-success-zh.html
@@ -49,16 +49,7 @@
     
           <main class="flex-shrink-0">
             <div class="container py-2">
-                <div class="bg-light p-5 rounded">
-                    <h1>登入</h1>
-                    <form class="me-auto"method="POST" action="/process-login?lang=zh">
-                        <label for="username">用戶名稱: </label>
-                        <input class="form-control" type="text" name="username"><br>
-                        <label for="password">密碼: </label>
-                        <input class="form-control" type="password" name="password"><br>
-                        <input class="btn btn-primary" type="submit" value="送出">
-                    </form>
-                </div>
+                <h1>登入成功</h1>>
             </div>
           </main>
     
